refactor: findMaxGeneration Optional 패턴 적용 및 toList() 개선