@@ -7,7 +7,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 public class HistoryPersistenceAdapter implements LoadHistoryPort {
@@ -22,12 +21,12 @@ public class HistoryPersistenceAdapter implements LoadHistoryPort {
     public List<History> findByGeneration(Integer generation) {
         return historyJpaRepository.findByGeneration(generation).stream()
                 .map(HistoryMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public Integer findMaxGeneration() {
-        return historyJpaRepository.findMaxGeneration().orElse(null);
+    public Optional<Integer> findMaxGeneration() {
+        return historyJpaRepository.findMaxGeneration();
     }
 
     @Override
